<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_editext"
        android:textSize="@dimen/sp_30"
        android:gravity="end"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_editext"
        android:textSize="@dimen/sp_30"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:background="#020202"
            android:layout_marginTop="@dimen/sp_1"
            >
            <TableRow
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/deleteAll"
                    android:text="@string/_ac"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/negative"
                    android:text="@string/n"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/t100"
                    android:text="@string/_100"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/div"
                    android:text="@string/div"
                    android:textSize="@dimen/sp_30"
                    android:background="#F0A12E"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />

            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num7"
                    android:text="@string/_7"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num8"
                    android:text="@string/_8"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num9"
                    android:text="@string/_9"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/multiply"
                    android:text="@string/_x"
                    android:textSize="@dimen/sp_30"
                    android:background="#F0A12E"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />

            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num4"
                    android:text="@string/_4"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num5"
                    android:text="@string/_5"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num6"
                    android:text="@string/_6"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/subtract"
                    android:text="@string/subtract"
                    android:textSize="@dimen/sp_30"
                    android:background="#F0A12E"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />

            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num1"
                    android:text="@string/_1"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num2"
                    android:text="@string/_2"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/num3"
                    android:text="@string/_3"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sum"
                    android:text="@string/sum"
                    android:textSize="@dimen/sp_30"
                    android:background="#F0A12E"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />

            </TableRow>
            <TableRow
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2"
                    android:id="@+id/num0"
                    android:text="@string/_0"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/dot"
                    android:text="@string/dot"
                    android:textSize="@dimen/sp_30"
                    android:background="@color/color_button"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/equals"
                    android:text="@string/equals"
                    android:textSize="@dimen/sp_30"
                    android:background="#F0A12E"
                    android:layout_marginEnd="@dimen/sp_1"
                    android:layout_marginBottom="@dimen/sp_1"
                    />

            </TableRow>
        </TableLayout>
    </LinearLayout>


</LinearLayout>